@startuml
title Task 状態遷移図

[*] -> Opened: Add task

state Closed {
}

state Opened {
    state Todo
    state Doing
    state Paused
    state Completed

    [*] --> Todo
    Todo --> Doing: Start
    Doing --> Todo: Reset
    Doing --> Paused: Stop
    Paused --> Doing
    Doing --> Completed: Complete
    Completed --> Doing
}

Opened --> Closed: Close
Closed --> Opened
Closed --> [*]

@enduml
